tests/wordpress/fail/plugins/wp-bannerize/main.php
<?php
/*
Plugin Name: WP Bannerize
Plugin URI: http://www.saidmade.com/prodotti/wordpress/wp-bannerize/
Description: WP Bannerize is an Amazing Banner Manager. For more info and plugins visit <a href="http://www.saidmade.com">Saidmade</a>.
Version: 2.8.6
Author: Giovambattista Fazioli
Author URI: http://www.saidmade.com
Disclaimer: Use at your own risk. No warranty expressed or implied is provided.
